--- a/workspace/css/styles.css
+++ b/workspace/css/styles.css
@@ -366,6 +366,7 @@ hr {
 #content #infobar {
 	position: absolute;
 	z-index: 100;
+	background-color: #58941b;
 	-moz-box-shadow: 0px 2px 2px rgba(51, 51, 51, 0.4);
 	-webkit-box-shadow: 0px 2px 2px rgba(51, 51, 51, 0.4);
 	box-shadow: 0px 2px 2px rgba(51, 51, 51, 0.4);
